--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/54367/fortune-cookie-emoji-clipart-md.png" />
     <title>Galletas de la fortuna</title>
   </head>
   <body>
